--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ li {
 }
 
 body {
-	font-family: Helvetica, sans-serif;
+	font-family: Helvetica, Arial, Helvetica, sans-serif;
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
