--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 :root {
-	font-size: 19px;
-	--color16: rgb(4, 8, 16);
-	--color32: rgb(24, 24, 40);
-	--color64: rgb(64, 32, 8);
-	--color96: rgb(96, 96, 96);
-	--color128: rgb(128, 128, 128);
-	--color192: rgb(256, 128, 64);
-	--color224: rgb(224, 224, 224);
-	--height: 2.25rem;
+    font-size: 19px;
+    --color16: rgb(4, 8, 16);
+    --color32: rgb(24, 24, 40);
+    --color64: rgb(64, 32, 8);
+    --color96: rgb(96, 96, 96);
+    --color128: rgb(128, 128, 128);
+    --color192: rgb(256, 128, 64);
+    --color224: rgb(224, 224, 224);
+    --height: 2.25rem;
 }
 
 h1,
@@ -15,51 +15,65 @@ h2,
 h3,
 ul,
 li {
-	all: unset;
-	color: var(--color192);
-	text-align: center;
-	align-self: center;
+    all: unset;
+    color: var(--color192);
+    text-align: center;
+    align-self: center;
 }
 
 body {
-	font-family: Helvetica, Arial, Helvetica, sans-serif;
-	box-sizing: border-box;
-	padding: 0;
-	margin: 0;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	/*align-content: center;*/
-	/*justify-items: center;*/
-	/*justify-content: center;*/
-	background-color: var(--color128);
+    font-family: Helvetica, Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /*align-content: center;*/
+    /*justify-items: center;*/
+    /*justify-content: center;*/
+    background-color: var(--color128);
 }
 
 h1 {
-	font-size: 3rem;
-	font-weight: 800;
-	margin: 1.5rem 0;
+    font-size: 3rem;
+    font-weight: 800;
+    margin: 1.5rem 0;
 }
 h2 {
-	font-size: 1.75rem;
-	text-transform: uppercase;
-	font-weight: 500;
-	margin: 1rem 0 0.3rem 0;
+    font-size: 1.75rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    margin: 1rem 0 0.3rem 0;
 }
 h3 {
-	font-size: 1.25rem;
+    font-size: 1.25rem;
 }
 p {
-	all: unset;
-	color: var(--color192);
-	font-size: 1.5rem;
+    all: unset;
+    color: var(--color192);
+    font-size: 1.5rem;
 }
 
 form {
-	display: grid;
-	grid-template-columns: 1fr 3fr;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    gap: 0.3rem;
+}
+
+input,
+label,
+button,
+select {
+    font-size: 1.5rem;
 }
 
 button {
-	grid-column: span 2;
+    grid-column: span 2;
+}
+
+@media (orientation: portrait) {
+    :root {
+        font-size: 35px;
+    }
 }
