--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,13 @@ form button {
   grid-template-rows: repeat(6, auto);
   border-radius: var(--borderRadius);
 }
+.userProfile .remove-record {
+  grid-column: span 2;
+  grid-row: span 1;
+  padding: 0.5em;
+  text-align: center;
+  border-radius: var(--borderRadius);
+}
 .userProfile .photo {
   grid-column: span 1;
   grid-row: span 6;
@@ -171,8 +178,8 @@ span:after {
   }
 
   .userProfile {
-    grid-template-columns: 1fr auto;
-    grid-auto-rows: auto auto auto;
+    grid-template-columns: 5fr 4fr;
+    grid-auto-rows: auto;
   }
   .userProfile .photo {
     min-height: 50vw;
