--- a/scss/_userProfile.scss
+++ b/scss/_userProfile.scss
@@ -31,6 +31,13 @@ form {
 	grid-template-rows: repeat(6, auto);
 	border-radius: var(--borderRadius);
 
+	.remove-record {
+		grid-column: span 2;
+		grid-row: span 1;
+		padding: 0.5em;
+		text-align: center;
+		border-radius: var(--borderRadius);
+	}
 
 	.photo {
 		grid-column: span 1;
