Complete a function to remove an element.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 :root {
   font-size: 19px;
   --colorB1: hsla(180, 15%, 10%, 1);
-  --colorB2: hsla(180, 15%, 25%, 1);
-  --colorB3: hsla(180, 15%, 35%, 1);
-  --colorF1: hsla(180, 15%, 55%, 1);
-  --colorF2: hsla(180, 15%, 80%, 1);
+  --colorB2: hsla(200, 25%, 25%, 1);
+  --colorB3: hsla(200, 25%, 35%, 1);
+  --colorF1: hsla(21, 75%, 60%, 1);
+  --colorF2: hsla(21, 55%, 75%, 1);
   --borderRadius: 0;
   --width: 75vw;
 }
@@ -91,12 +91,17 @@ header {
 form {
   width: var(--width);
   display: grid;
-  grid-template-columns: 2fr 5fr;
+  grid-template-columns: 3fr 5fr;
   gap: 0.3rem;
+}
+form label {
+  text-align: center;
+  text-transform: uppercase;
 }
 form button {
   grid-column: span 2;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .userProfile {
