--- a/scss/_userProfile.scss
+++ b/scss/_userProfile.scss
@@ -13,12 +13,18 @@ header {
 form {
 	width: var(--width);
 	display: grid;
-	grid-template-columns: 2fr 5fr;
+	grid-template-columns: 3fr 5fr;
 	gap: 0.3rem;
+
+	label {
+		text-align: center;
+		text-transform: uppercase;
+	}
 
 	button {
 		grid-column: span 2;
 		text-align: center;
+		text-transform: uppercase;
 	}
 }
 
