--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -1,4 +1,5 @@
-header {
+header, footer {
+	max-width: 100%;
     width: 100vw;
     height: 3rem;
     font-size: 1.5rem;
@@ -7,15 +8,19 @@ header {
     justify-content: center;
     background-color: var(--colorB1);
     color: var(--colorF1);
-	&.gray {
-		color: hsl(0,0%,50%) !important;
-	}
+    &.gray {
+        color: hsl(0, 0%, 50%) !important;
+    }
     span {
         color: var(--colorB3);
-	    &.red {
-		    color: red !important;
-	    }
+        &.red {
+            color: red !important;
+        }
     }
+}
+footer {
+	position: fixed;
+	bottom: 0;
 }
 
 nav {
