--- a/src/scss/_userProfile.scss
+++ b/src/scss/_userProfile.scss
@@ -1,132 +1,100 @@
 .bigDiv {
-	display: none;
-	min-height: 85vh;
-	&.active {
-		display: flex;
-		align-items: center;
-		justify-content: start;
-		flex-direction: column;
-	}
+    display: none;
+    min-height: calc(100vh - 9rem);
+    &.active {
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        flex-direction: column;
+    }
 }
 
 form {
-	width: var(--width);
-	display: grid;
-	grid-template-columns: 3fr 5fr;
-	//gap: 0.3rem;
-	> * {
+    width: var(--width);
+    display: grid;
+    grid-template-columns: 3fr 5fr;
+    //gap: 0.3rem;
+    > * {
         border-bottom: 0.1rem solid var(--colorF2);
-	}
+    }
 
-	label {
-		text-align: center;
-		text-transform: uppercase;
-	}
+    label {
+        text-align: center;
+        text-transform: uppercase;
+    }
 
-	button {
-		grid-column: span 1;
-		text-align: center;
-		text-transform: uppercase;
-	}
-
-	.removeAllRecords {
-		grid-column: span 1;
-		text-align: center;
-		text-transform: uppercase;
-		font-size: 1.5rem;
-		padding: 0.5rem;
-		//margin: 0.15rem 0;
-	}
+    button {
+        grid-column: span 2;
+        text-align: center;
+        text-transform: uppercase;
+    }
 }
 
+
 .userProfile {
-	width: var(--width);
-	margin: 2rem 0;
-	display: grid;
-	gap: 0.5rem;
-	grid-template-columns: 2fr 5fr;
-	grid-template-rows: repeat(6, auto);
-	border-radius: var(--borderRadius);
-	//box-shadow: 0 0 0.15rem 0.15rem var(--colorB1);
+    width: var(--width);
+    margin: 2rem 0;
+    display: grid;
+    gap: 0.5rem;
+    grid-template-columns: 2fr 5fr;
+    grid-template-rows: repeat(6, auto);
 
-	.remove-record {
-		grid-column: span 2;
-		grid-row: span 1;
-		padding: 0.5em;
-		text-align: center;
-		border-radius: var(--borderRadius);
-		border-bottom: 0.1rem solid var(--colorF2);
-	}
+    .record {
+        padding: 0.5em;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-bottom: 0.1rem solid var(--colorF2);
+        text-transform: uppercase;
+        background-color: var(--colorB1);
+        color: var(--colorF1);
+        .remove:hover {
+            color: var(--colorB3);
+        }
+    }
 
-	.photo {
-		grid-column: span 1;
-		grid-row: span 6;
-		//background-image: url('https://avatars1.githubusercontent.com/u/50179458?v=4');
-		background-size: contain;
-		background-repeat: no-repeat;
-		background-position: center;
-		border-radius: var(--borderRadius);
-	}
+    .photo {
+        grid-column: span 1;
+        grid-row: span 6;
+        //background-image: url('https://avatars1.githubusercontent.com/u/50179458?v=4');
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
 
-	.userStatsAll {
-		display: grid;
-		grid-template-columns: repeat(4, auto);
-		gap: var(--borderRadius);
-		justify-content: space-between;
-		//display: flex;
-		//flex-wrap: wrap;
-		//align-items: center;
-		//justify-content: space-around;
-		border-bottom: 0.1rem solid var(--colorF2);
-		border-radius: var(--borderRadius);
-
-		.userStat {
-			border-radius: var(--borderRadius);
-			padding: 0.5em;
-			display: flex;
-			align-items: center;
-		}
-	}
-
-	.userInfo {
-		display: flex;
-		align-items: center;
-		justify-content: start;
-		border-radius: var(--borderRadius);
-		padding: 0.5em;
-		border-bottom: 0.1rem solid var(--colorF2);
-	}
-
-	.goToProfile {
-		grid-column: span 2;
-		grid-row: span 1;
-		padding: 0.5em;
-		text-align: center;
-		border-radius: var(--borderRadius);
-		text-decoration: none;
-	}
+    .userInfo {
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        padding: 0.5em;
+        border-bottom: 0.1rem solid var(--colorF2);
+        a {
+            text-decoration: none;
+            color: inherit;
+        }
+    }
 }
 
 .searchResult {
-	display: grid;
+    display: grid;
 }
 
 .notFound {
-	width: var(--width);
-	padding: 5rem 0;
-	font-size: 3rem;
-	text-align: center;
+    width: var(--width);
+    padding: 5rem 0;
+    font-size: 3rem;
+    text-align: center;
 }
 
 span {
-	color: var(--colorF1);
-	margin: 0 0.25em;
+    color: var(--colorF1);
+    margin: 0 0.25em;
 }
 
 span:before {
-	content: ' ';
+    content: ' ';
 }
 
 span:after {
-	content: ' ';
+    content: ' ';
 }
