--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -1,6 +1,6 @@
 header, footer {
 	max-width: 100%;
-    width: 100vw;
+    width: 100%;
     height: 3rem;
     font-size: 1.5rem;
     display: flex;
@@ -19,12 +19,11 @@ header, footer {
     }
 }
 footer {
-	//position: sticky;
 	bottom: 0;
 }
 
 nav {
-    width: 100vw;
+    width: 100%;
     display: grid;
     align-items: center;
     justify-content: stretch;
