--- a/src/scss/_extendedProfile.scss
+++ b/src/scss/_extendedProfile.scss
@@ -113,6 +113,7 @@
 		.aboutRepositories {
 			padding: 0.5em 1em;
 			border-bottom: 0.1rem solid var(--colorF2);
+			text-transform: uppercase;
 		}
 
 		.oneRepository {
