--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -1,69 +1,114 @@
 header, footer {
 	max-width: 100%;
-    width: 100%;
-    height: 3rem;
-    font-size: 1.5rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--colorB1);
-    color: var(--colorF1);
-    &.gray {
-        color: hsl(0, 0%, 50%) !important;
-    }
-    span {
-        color: var(--colorB3);
-        &.red {
-            color: red !important;
-        }
-    }
+	width: 100%;
+	height: 3rem;
+	font-size: 1.5rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: var(--colorB1);
+	color: var(--colorF1);
+
+	&.gray {
+		color: hsl(0, 0%, 50%) !important;
+	}
+
+	span {
+		color: var(--colorB3);
+
+		&.red {
+			color: red !important;
+		}
+	}
 }
+
 footer {
 	bottom: 0;
 }
 
 nav {
-    width: 100%;
-    display: grid;
-    align-items: center;
-    justify-content: stretch;
-    grid-template-columns: repeat(2, auto);
-    background-color: var(--colorB1);
+	width: 100%;
+	display: grid;
+	align-items: center;
+	justify-content: stretch;
+	grid-template-columns: repeat(2, auto);
+	background-color: var(--colorB1);
 
-    .tab {
-        font-size: 1.5rem;
-        padding: 0.5rem 1em;
-        color: var(--colorB3);
-        background-color: var(--colorB1);
-        text-align: center;
+	.tab {
+		font-size: 1.5rem;
+		padding: 0.5rem 1em;
+		color: var(--colorB3);
+		background-color: var(--colorB1);
+		text-align: center;
 
-        &:hover {
-            color: var(--colorF1);
-            transition: 300ms;
-            background-color: var(--colorB0);
-        }
+		&:hover {
+			color: var(--colorF1);
+			transition: 300ms;
+			background-color: var(--colorB0);
+		}
 
-        &.active {
-            color: var(--colorF1);
-            background-color: var(--colorB0);
-        }
-    }
+		&.active {
+			color: var(--colorF1);
+			background-color: var(--colorB0);
+		}
+	}
 }
 
 .foldersPart {
-    height: 1rem;
-    grid-column: span 3;
-    background-color: var(--colorB0);
+	height: 1rem;
+	grid-column: span 3;
+	background-color: var(--colorB0);
 }
 
 #Tab-UserSearcher {
-    clip-path: polygon(0 0, calc(100% - 1rem) 0, 100% 100%, 0 100%);
+	clip-path: polygon(0 0, calc(100% - 1rem) 0, 100% 100%, 0 100%);
 }
 
 #Tab-UserByLogin {
-    clip-path: polygon(1rem 0, calc(100% - 1rem) 0, 100% 100%, 0 100%);
+	clip-path: polygon(1rem 0, calc(100% - 1rem) 0, 100% 100%, 0 100%);
 }
 
 #Tab-AccessKey {
-    clip-path: polygon(1rem 0, 100% 0, 100% 100%, 0 100%);
+	clip-path: polygon(1rem 0, 100% 0, 100% 100%, 0 100%);
+}
+
+#paginationButton {
+    width: var(--width);
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    text-transform: uppercase;
+
+	font-size: 1.35rem;
+	padding: 0.5em 0;
+
+	#previousPage {
+		visibility: hidden;
+        text-align: center;
+
+        //width: 10rem;
+        //padding: 0.5em;
+        //color: hsl(0, 0%, 85%);
+        //background-color: var(--colorRed);
+
+		color: var(--colorB2);
+		&:hover {
+			color: var(--colorF1);
+		}
+	}
+
+	#nextPage {
+		visibility: hidden;
+        text-align: center;
+
+        //width: 10rem;
+        //padding: 0.5em;
+        //color: hsl(0, 0%, 85%);
+        //background-color: var(--colorRed);
+
+		color: var(--colorB2);
+		&:hover {
+			color: var(--colorF1);
+		}
+	}
 }
