--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,7 @@
 :root {
     font-size: 19px;
-    --colorRed: hsl(220, 20%, 16%);
+    --colorRed: hsl(1, 80%, 57%);
+    --color250: hsl(250, 100%, 75%);
     //--colorB1: hsla(195, 20%, 14%, 1);
     //--colorB2: hsla(199, 60%, 60%, 1);
     //--colorB3: hsla(210, 48%, 74%, 1);
